--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                 <b class="description-contact">Catering Service, 42nd Living St, 43043 New York, NY
 
                 </b>
-                <p class="text-contact">You can also contact us by phone 0387901461 or email hoquocnam@gmail.com,
+                <p class="text-contact">You can also contact us by phone <span>0387901461</span> or email
+                    hoquocnam@gmail.com,
                     or you can send us a
                     message here:
 
